added main contain of index file: my picture, short paragraphs about me

--- a/Index/index.html
+++ b/Index/index.html
@@ -32,6 +32,31 @@
             </ul>
         </div>
     </nav>
+    <main class="row mt-5 ml-3 mb-5">
+        <div class="col-lg-8 col-md-8 col-11 ">
+            <div class="container bg-white rounded-0 jumbotron mt-4 ">
+                <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">About Me</h1>
+                <div class="container px-0 mx-0">
+
+                    <img class="float-left mr-3 img-fluid py-2" src="./profile.jpg" alt="my profile picture">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum laudantium eos autem velit
+                        voluptate. Asperiores itaque harum corrupti, dolorum blanditiis voluptatum perspiciatis quis
+                        repudiandae, magni quidem delectus mollitia, nemo veritatis. Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Doloribus iste harum pariatur inventore nihil et eligendi
+                        illo, architecto, ab dolorem non temporibus est maxime ratione ex iusto provident dolor
+                        iure. Lorem, ipsum dolor.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perspiciatis accusamus possimus
+                        eum quaerat natus eligendi excepturi dicta quam exercitationem itaque impedit, iste
+                        pariatur, distinctio consequuntur labore. Autem, assumenda debitis!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 
 </html>
