added footer to index page

--- a/Index/index.html
+++ b/Index/index.html
@@ -56,7 +56,9 @@
             </div>
         </div>
     </main>
-
+    <footer class=" footer bg-dark border-info text-center">
+        <div class=" text-muted">&#169;Copyright</div>
+    </footer>
 </body>
 
 </html>
