updated link for my profile picture

--- a/Index/index.html
+++ b/Index/index.html
@@ -38,7 +38,7 @@
                 <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">About Me</h1>
                 <div class="container px-0 mx-0">
 
-                    <img class="float-left mr-3 img-fluid py-2" src="./profile.jpg" alt="my profile picture">
+                    <img class="float-left mr-3 img-fluid py-2" src="./images/profile.jpg" alt="my profile picture">
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum laudantium eos autem velit
                         voluptate. Asperiores itaque harum corrupti, dolorum blanditiis voluptatum perspiciatis quis
