--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -32,6 +32,30 @@
             </ul>
         </div>
     </nav>
+    <div class="row mt-5 ml-3 mb-5">
+        <div class="col-lg-8 col-md-8 col-11">
+            <div class="container bg-white rounded-0 jumbotron mt-5">
+                <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">Contact</h1>
+                <form class=" col-md-9 col-11">
+                    <div class="form-group">
+                        <label for="exampleInputName">Name</label>
+                        <input type="text" class="form-control" id="inputName3" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea type="text" class="form-control" id="exampleFormControlTextarea1" rows="3"
+                            placeholder="Message"></textarea>
+
+                    </div>
+                </form>
+                <button type="submit" class="btn rounded-0 px-4 py-2 btn-info">Submit</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
