added footer to contact.html file

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -56,6 +56,10 @@
             </div>
         </div>
     </div>
+    <footer class=" footer bg-dark border-info text-center">
+        <div class=" text-muted">&#169;Copyright</div>
+    </footer>
+
 </body>
 
 </html>
