--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -32,6 +32,45 @@
             </ul>
         </div>
     </nav>
+    <main class="row mt-5 ml-3 mb-5">
+        <div class="col-lg-8 col-md-8 col-11">
+            <div class="container bg-white rounded-0 jumbotron ">
+                <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">Portfolio</h1>
+                <div class="container px-0 mx-0">
+
+                    <div class="row">
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <img src="./images/1.jpg" class="img-fluid py-3" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <img src="./images/2.jpg" class="img-fluid py-3 " alt="">
+                        </div>
+                    </div>
+                    <div class="w-100 p-1 "></div>
+
+                    <div class="row">
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <img src="./images/3.jpg" class="img-fluid py-3" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <img src="./images/4.jpg" class="img-fluid py-3" alt="">
+                        </div>
+                    </div>
+
+                    <div class="w-100 p-1 "></div>
+
+                    <div class="row">
+                        <div class="col-lg-6 col-md-8 col-12">
+                            <img src="./images/5.jpg" class="img-fluid py-3" alt="">
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
