added footer to portfolio page

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -71,6 +71,9 @@
             </div>
         </div>
     </main>
+    <footer class=" footer bg-dark border-info text-center">
+        <div class=" text-muted">&#169;Copyright 2020 Lili Huynh</div>
+    </footer>
 </body>
 
 </html>
