--- a/Index/index.html
+++ b/Index/index.html
@@ -36,11 +36,11 @@
         <div class="col-lg-8 col-md-8 col-11 ">
             <div class="container bg-white rounded-0 jumbotron mt-4 ">
                 <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">About Me</h1>
-                <div class="container px-0 mx-0">
+                <article class="container px-0 mx-0">
 
                     <img class="float-left mr-3 img-fluid py-2" src="./images/profile.jpg" alt="my profile picture">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum laudantium eos autem velit
+                        Lorem ipsum dolor sit, amet consec adipis elit. Ipsum laudan eos autem velit
                         voluptate. Asperiores itaque harum corrupti, dolorum blanditiis voluptatum perspiciatis quis
                         repudiandae, magni quidem delectus mollitia, nemo veritatis. Lorem ipsum dolor sit amet
                         consectetur adipisicing elit. Doloribus iste harum pariatur inventore nihil et eligendi
@@ -52,7 +52,7 @@
                         eum quaerat natus eligendi excepturi dicta quam exercitationem itaque impedit, iste
                         pariatur, distinctio consequuntur labore. Autem, assumenda debitis!
                     </p>
-                </div>
+                </article>
             </div>
         </div>
     </main>
