line 35: changed div to main tag

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <div class="row mt-5 ml-3 mb-5">
+    <main class="row mt-5 ml-3 mb-5">
         <div class="col-lg-8 col-md-8 col-11">
             <div class="container bg-white rounded-0 jumbotron mt-5">
                 <h1 class="text-info font-weight-bold  border-bottom myborder h1 pb-3">Contact</h1>
@@ -55,7 +55,7 @@
                 <button type="submit" class="btn rounded-0 px-4 py-2 btn-info">Submit</button>
             </div>
         </div>
-    </div>
+    </main>
     <footer class=" footer bg-dark border-info text-center">
         <div class=" text-muted">&#169;Copyright</div>
     </footer>
