--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="./index.html">About</a>
                 </li>
             </ul>
         </div>
