--- a/index.html
+++ b/index.html
@@ -39,18 +39,21 @@
 
                     <img class="float-left mr-3 img-fluid py-2" src="./images/profile.jpg" alt="my profile picture">
                     <p>
-                        Lorem ipsum dolor sit, amet consec adipis elit. Ipsum laudan eos autem velit
-                        voluptate. Asperiores itaque harum corrupti, dolorum blanditiis voluptatum perspiciatis quis
-                        repudiandae, magni quidem delectus mollitia, nemo veritatis. Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Doloribus iste harum pariatur inventore nihil et eligendi
-                        illo, architecto, ab dolorem non temporibus est maxime ratione ex iusto provident dolor
-                        iure. Lorem, ipsum dolor.
+                        Full stack web developer with analytical skills and people skills from previous finance and
+                        banking positions. Certificate from University of Washington in full stack technology, including
+                        skills in React.js, JavaScript, HTML and Node.js. Passionate about exploring ways to provide
+                        users quicker and easier access to their needs.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perspiciatis accusamus possimus
-                        eum quaerat natus eligendi excepturi dicta quam exercitationem itaque impedit, iste
-                        pariatur, distinctio consequuntur labore. Autem, assumenda debitis!
+                        Presented by: Lili Huynh
                     </p>
+                    <p>
+                        Github profile: https://github.com/lillianhuynh
+                    </p>
+                    <p>
+                        Linked profile: https://www.linkedin.com/in/lili-huynh-19593b1b3
+                    </p>
+                    <a href="">Resume</a>
                 </article>
             </div>
         </div>
