--- a/portfolio.html
+++ b/portfolio.html
@@ -39,17 +39,17 @@
 
                     <div class="row">
                         <figure class="col-lg-6 col-md-8 col-12">
-                            <img src="./images/1.jpg" class="img-fluid py-3" alt="">
+                           <a href= "https://github.com/lillianhuynh/STALK"><img src="./images/project-stock.png" class="img-fluid py-3" alt=""></a> 
                         </figure>
                         <figure class="col-lg-6 col-md-8 col-12">
-                            <img src="./images/2.jpg" class="img-fluid py-3 " alt="">
+                           <a href="https://github.com/lillianhuynh/Third-Party-APIs-Work-Day-Scheduler"><img src="./images/workDayScheduler.png" class="img-fluid py-3 " alt=""></a> 
                         </figure>
                     </div>
                     <div class="w-100"></div>
 
                     <div class="row">
                         <figure class="col-lg-6 col-md-8 col-12">
-                            <img src="./images/3.jpg" class="img-fluid py-3" alt="">
+                           <a href="https://github.com/lillianhuynh/Weather-Dashboard"><img src="./images/weatherDashboard.png" class="img-fluid py-3" alt=""></a> 
                         </figure>
                         <figure class="col-lg-6 col-md-8 col-12">
                             <img src="./images/4.jpg" class="img-fluid py-3" alt="">
