update portfolio with new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,31 +38,41 @@
                 <div class="container px-0 mx-0 pt-3">
 
                     <div class="row">
-                        <figure class="col-lg-6 col-md-8 col-12">
-                           <a href= "https://github.com/lillianhuynh/STALK"><img src="./images/project-stock.png" class="img-fluid py-3" alt=""></a> 
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://lillianhuynh.github.io/STALK/"><img src="./images/project-stock.png" class="img-fluid py-3" alt="STALK app-Github"></a>
+                            <a href="https://github.com/lillianhuynh/STALK">STALK app-Github</a>
                         </figure>
-                        <figure class="col-lg-6 col-md-8 col-12">
-                           <a href="https://github.com/lillianhuynh/Third-Party-APIs-Work-Day-Scheduler"><img src="./images/workDayScheduler.png" class="img-fluid py-3 " alt=""></a> 
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://lillianhuynh.github.io/Third-Party-APIs-Work-Day-Scheduler/"><img src="./images/workDayScheduler.png" class="img-fluid py-3" alt="Work Day Scheduler"></a>
+                            <a href="https://github.com/lillianhuynh/Third-Party-APIs-Work-Day-Scheduler">Work Day Scheduler-Github</a>
                         </figure>
                     </div>
                     <div class="w-100"></div>
 
                     <div class="row">
-                        <figure class="col-lg-6 col-md-8 col-12">
-                           <a href="https://github.com/lillianhuynh/Weather-Dashboard"><img src="./images/weatherDashboard.png" class="img-fluid py-3" alt=""></a> 
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://lillianhuynh.github.io/Weather-Dashboard/"><img src="./images/weatherDashboard.png" class="img-fluid py-3" alt="Weather Dashboard"></a>
+                            <a href="https://github.com/lillianhuynh/Weather-Dashboard">Weather Dashboard-Github</a>
                         </figure>
-                        <figure class="col-lg-6 col-md-8 col-12">
-                            <img src="./images/4.jpg" class="img-fluid py-3" alt="">
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://budgettracker12345.herokuapp.com/"><img src="./images/budgetApp.png" class="img-fluid py-3" alt="Budget Tracker"></a>
+                            <a href="https://github.com/lillianhuynh/Online-Offline-Budget-Trackers">Budget Tracker-Github</a>
+                            
                         </figure>
                     </div>
 
                     <div class="w-100"></div>
 
                     <div class="row">
-                        <figure class="col-lg-6 col-md-8 col-12">
-                            <img src="./images/5.jpg" class="img-fluid py-3" alt="">
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://lillianhuynh.github.io/Employee-Directory/"><img src="./images/employDirectoty.png" class="img-fluid py-3" alt="Employee Directory"></a>
+                            <a href="https://github.com/lillianhuynh/Employee-Directory">Employee Directory-Github</a>
                         </figure>
-
+                        <figure class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="https://drive.google.com/file/d/1iME8iQ0y6FbGrefxU2Lkiqxwc8p5uwSt/view?usp=sharing"><img src="./images/READMEgenerator.png" class="img-fluid py-3" alt="README generator-Github"></a>
+                            <a href="https://github.com/lillianhuynh/Professional_README_Generator">README generator-Github</a>
+                        </figure>
+                        
                     </div>
 
                 </div>
