--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                         Presented by: Lili Huynh
                     </p>
                     <p>
-                        Github profile: https://github.com/lillianhuynh
+                        Github profile: <a target="_blank" href="https://github.com/lillianhuynh">https://github.com/lillianhuynh</a>
                     </p>
                     <p>
-                        Linked profile: https://www.linkedin.com/in/lili-huynh-19593b1b3
+                        Linked profile: <a target="_blank" href ="https://www.linkedin.com/in/lili-huynh-19593b1b3">https://www.linkedin.com/in/lili-huynh-19593b1b3</a>
                     </p>
-                    <a href="">Resume</a>
+                    <a target="_blank" href="Resources\LILI_HUYNH_RESUME_Dec 2019.pdf">Resume</a>
                 </article>
             </div>
         </div>
