--- a/portfolio.html
+++ b/portfolio.html
@@ -39,24 +39,24 @@
 
                     <div class="row">
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://lillianhuynh.github.io/STALK/"><img src="./images/project-stock.png" class="img-fluid py-3" alt="STALK app-Github"></a>
-                            <a href="https://github.com/lillianhuynh/STALK">STALK app-Github</a>
+                            <a target="_blank" href="https://lillianhuynh.github.io/STALK/"><img src="./images/project-stock.png" class="img-fluid py-3" alt="STALK app-Github"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/STALK">STALK app-Github</a>
                         </figure>
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://lillianhuynh.github.io/Third-Party-APIs-Work-Day-Scheduler/"><img src="./images/workDayScheduler.png" class="img-fluid py-3" alt="Work Day Scheduler"></a>
-                            <a href="https://github.com/lillianhuynh/Third-Party-APIs-Work-Day-Scheduler">Work Day Scheduler-Github</a>
+                            <a target="_blank" href="https://lillianhuynh.github.io/Third-Party-APIs-Work-Day-Scheduler/"><img src="./images/workDayScheduler.png" class="img-fluid py-3" alt="Work Day Scheduler"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/Third-Party-APIs-Work-Day-Scheduler">Work Day Scheduler-Github</a>
                         </figure>
                     </div>
                     <div class="w-100"></div>
 
                     <div class="row">
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://lillianhuynh.github.io/Weather-Dashboard/"><img src="./images/weatherDashboard.png" class="img-fluid py-3" alt="Weather Dashboard"></a>
-                            <a href="https://github.com/lillianhuynh/Weather-Dashboard">Weather Dashboard-Github</a>
+                            <a target="_blank" href="https://lillianhuynh.github.io/Weather-Dashboard/"><img src="./images/weatherDashboard.png" class="img-fluid py-3" alt="Weather Dashboard"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/Weather-Dashboard">Weather Dashboard-Github</a>
                         </figure>
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://budgettracker12345.herokuapp.com/"><img src="./images/budgetApp.png" class="img-fluid py-3" alt="Budget Tracker"></a>
-                            <a href="https://github.com/lillianhuynh/Online-Offline-Budget-Trackers">Budget Tracker-Github</a>
+                            <a target="_blank" href="https://budgettracker12345.herokuapp.com/"><img src="./images/budgetApp.png" class="img-fluid py-3" alt="Budget Tracker"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/Online-Offline-Budget-Trackers">Budget Tracker-Github</a>
                             
                         </figure>
                     </div>
@@ -65,12 +65,12 @@
 
                     <div class="row">
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://lillianhuynh.github.io/Employee-Directory/"><img src="./images/employDirectoty.png" class="img-fluid py-3" alt="Employee Directory"></a>
-                            <a href="https://github.com/lillianhuynh/Employee-Directory">Employee Directory-Github</a>
+                            <a target="_blank" href="https://lillianhuynh.github.io/Employee-Directory/"><img src="./images/employDirectoty.png" class="img-fluid py-3" alt="Employee Directory"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/Employee-Directory">Employee Directory-Github</a>
                         </figure>
                         <figure class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="https://drive.google.com/file/d/1iME8iQ0y6FbGrefxU2Lkiqxwc8p5uwSt/view?usp=sharing"><img src="./images/READMEgenerator.png" class="img-fluid py-3" alt="README generator-Github"></a>
-                            <a href="https://github.com/lillianhuynh/Professional_README_Generator">README generator-Github</a>
+                            <a target="_blank" href="https://drive.google.com/file/d/1iME8iQ0y6FbGrefxU2Lkiqxwc8p5uwSt/view?usp=sharing"><img src="./images/READMEgenerator.png" class="img-fluid py-3" alt="README generator-Github"></a>
+                            <a target="_blank" href="https://github.com/lillianhuynh/Professional_README_Generator">README generator-Github</a>
                         </figure>
                         
                     </div>
